# AI_Workflow_Agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: daily-tech-updates.yml  tech-updates.yml
src/: main.py
src/config/: __init__.py  settings.py
src/senders/: __init__.py  telegram.py
src/services/: __init__.py  collect_ai_news.py  whatsapp_sender.py
