[project]
name = "ai-workflow-agent"
version = "0.1.0"
description = "Automated AI news collection, summarization, PDF generation, and WhatsApp delivery"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Kartikey", email = "kartikey071999@example.com" }
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    "google-generativeai>=0.3.0",
    "twilio>=8.10.0",
    "reportlab>=4.0.0",
    "pillow>=10.1.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "icecream>=2.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]


[tool.ruff]
line-length = 88
target-version = "py314"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]


[tool.mypy]
python_version = ">=3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
